# ShotRouter

./: .gitignore  AGENTS.md  CLAUDE.md  PR_DRAFT.md  README.md  pyproject.toml
ScreenShots/: Screenshot from 2025-10-16 15-45-45.png.sr-claim-2375948-1760643946
docs/ai/: GEMINI.md
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md
docs/brand/: BRANDING.md
docs/brand/assets/: logo_ascii.txt
docs/brand/textual/: shotrouter_themes.tcss
docs/brand/web/: themes.css
docs/cli/: CLI.md
docs/conceptual/: KNOWLEDGE_GRAPH.md
docs/config/: CONFIG.md
docs/conventions/: NAMING.md
docs/data/: DATA_MODEL.md
docs/integrations/: INTEGRATIONS.md
docs/ops/: OPERATIONS.md
docs/overview/: WHITEPAPER.md
docs/roadmap/: ROADMAP.md
docs/security/: SECURITY.md
docs/spec/: SPEC.md
docs/testing/: TESTING.md
docs/todo/: TODO.md
docs/ui/: UI.md
src/shotrouter/: __main__.py  cli.py  config.py  db.py  events.py  routing.py  server.py  sources.py  state.py  watcher.py
src/shotrouter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/shotrouter/api/: __init__.py  routes.py  ws.py
src/shotrouter/ui_static/: index.html
src/shotrouter/ui_static/assets/: app.js  styles.css  themes.css
tests/: test_api_basic.py  test_api_more.py  test_api_routes.py  test_api_sources_persist.py  test_ui_requests.py  test_ws.py
tests/Test-Shots/: Screenshot from 2025-10-16 15-57-42.png.sr-claim-2421198-1760644663
